구글 api추가/이메일 시스템 exchange로 변경

--- a/test.ipynb
+++ b/test.ipynb
@@ -160,6 +160,262 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting exchangelib\n",
+      "  Downloading exchangelib-5.5.1-py3-none-any.whl.metadata (3.6 kB)\n",
+      "Collecting cached_property (from exchangelib)\n",
+      "  Downloading cached_property-2.0.1-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting defusedxml>=0.6.0 (from exchangelib)\n",
+      "  Downloading defusedxml-0.7.1-py2.py3-none-any.whl.metadata (32 kB)\n",
+      "Collecting dnspython>=2.2.0 (from exchangelib)\n",
+      "  Downloading dnspython-2.7.0-py3-none-any.whl.metadata (5.8 kB)\n",
+      "Collecting isodate (from exchangelib)\n",
+      "  Downloading isodate-0.7.2-py3-none-any.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: lxml>3.0 in c:\\python313\\lib\\site-packages (from exchangelib) (5.3.2)\n",
+      "Requirement already satisfied: oauthlib in c:\\python313\\lib\\site-packages (from exchangelib) (3.2.2)\n",
+      "Requirement already satisfied: pygments in c:\\users\\msi\\appdata\\roaming\\python\\python313\\site-packages (from exchangelib) (2.19.1)\n",
+      "Requirement already satisfied: requests>=2.31.0 in c:\\python313\\lib\\site-packages (from exchangelib) (2.32.3)\n",
+      "Collecting requests_ntlm>=0.2.0 (from exchangelib)\n",
+      "  Downloading requests_ntlm-1.3.0-py3-none-any.whl.metadata (2.4 kB)\n",
+      "Requirement already satisfied: requests_oauthlib in c:\\python313\\lib\\site-packages (from exchangelib) (2.0.0)\n",
+      "Requirement already satisfied: tzdata in c:\\python313\\lib\\site-packages (from exchangelib) (2025.2)\n",
+      "Requirement already satisfied: tzlocal in c:\\python313\\lib\\site-packages (from exchangelib) (5.3.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\python313\\lib\\site-packages (from requests>=2.31.0->exchangelib) (3.4.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\python313\\lib\\site-packages (from requests>=2.31.0->exchangelib) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\python313\\lib\\site-packages (from requests>=2.31.0->exchangelib) (2.4.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\python313\\lib\\site-packages (from requests>=2.31.0->exchangelib) (2025.1.31)\n",
+      "Collecting cryptography>=1.3 (from requests_ntlm>=0.2.0->exchangelib)\n",
+      "  Downloading cryptography-44.0.3-cp39-abi3-win_amd64.whl.metadata (5.7 kB)\n",
+      "Collecting pyspnego>=0.4.0 (from requests_ntlm>=0.2.0->exchangelib)\n",
+      "  Downloading pyspnego-0.11.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Requirement already satisfied: cffi>=1.12 in c:\\python313\\lib\\site-packages (from cryptography>=1.3->requests_ntlm>=0.2.0->exchangelib) (1.17.1)\n",
+      "Collecting sspilib>=0.1.0 (from pyspnego>=0.4.0->requests_ntlm>=0.2.0->exchangelib)\n",
+      "  Downloading sspilib-0.3.1-cp313-cp313-win_amd64.whl.metadata (6.2 kB)\n",
+      "Requirement already satisfied: pycparser in c:\\python313\\lib\\site-packages (from cffi>=1.12->cryptography>=1.3->requests_ntlm>=0.2.0->exchangelib) (2.22)\n",
+      "Downloading exchangelib-5.5.1-py3-none-any.whl (243 kB)\n",
+      "Downloading defusedxml-0.7.1-py2.py3-none-any.whl (25 kB)\n",
+      "Downloading dnspython-2.7.0-py3-none-any.whl (313 kB)\n",
+      "Downloading requests_ntlm-1.3.0-py3-none-any.whl (6.6 kB)\n",
+      "Downloading cached_property-2.0.1-py3-none-any.whl (7.4 kB)\n",
+      "Downloading isodate-0.7.2-py3-none-any.whl (22 kB)\n",
+      "Downloading cryptography-44.0.3-cp39-abi3-win_amd64.whl (3.2 MB)\n",
+      "   ---------------------------------------- 0.0/3.2 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 3.2/3.2 MB 22.4 MB/s eta 0:00:00\n",
+      "Downloading pyspnego-0.11.2-py3-none-any.whl (130 kB)\n",
+      "Downloading sspilib-0.3.1-cp313-cp313-win_amd64.whl (620 kB)\n",
+      "   ---------------------------------------- 0.0/620.8 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 620.8/620.8 kB 5.4 MB/s eta 0:00:00\n",
+      "Installing collected packages: sspilib, isodate, dnspython, defusedxml, cached_property, cryptography, pyspnego, requests_ntlm, exchangelib\n",
+      "Successfully installed cached_property-2.0.1 cryptography-44.0.3 defusedxml-0.7.1 dnspython-2.7.0 exchangelib-5.5.1 isodate-0.7.2 pyspnego-0.11.2 requests_ntlm-1.3.0 sspilib-0.3.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install exchangelib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "테스트 결과: 성공\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import smtplib\n",
+    "import urllib.parse\n",
+    "from email.mime.text import MIMEText\n",
+    "from email.mime.multipart import MIMEMultipart\n",
+    "from email.mime.base import MIMEBase\n",
+    "from email.header import Header\n",
+    "from email.encoders import encode_base64\n",
+    "\n",
+    "from exchangelib import Credentials, Account, Message, HTMLBody, Configuration, DELEGATE\n",
+    "\n",
+    "def send_email_exchange(subject, html_body, recipient, attachment_path=None, attachment_filename=None):\n",
+    "    \"\"\"\n",
+    "    Exchange 메일 서버를 사용하여 이메일을 발송하는 함수\n",
+    "    \n",
+    "    Args:\n",
+    "        subject: 이메일 제목\n",
+    "        html_body: HTML 형식의 이메일 본문\n",
+    "        recipient: 수신자 이메일 주소\n",
+    "        attachment_path: 첨부 파일 경로 (선택사항)\n",
+    "        attachment_filename: 첨부 파일로 표시될 이름 (선택사항)\n",
+    "    \n",
+    "    Returns:\n",
+    "        bool: 발송 성공 여부\n",
+    "    \"\"\"\n",
+    "    sender = os.getenv(\"EXCHANGE_EMAIL\")\n",
+    "    email_pw = os.getenv(\"EXCHANGE_PASSWORD\")\n",
+    "    exchange_server = os.getenv(\"EXCHANGE_SERVER\")\n",
+    "    \n",
+    "    if None in [sender, email_pw, exchange_server]:\n",
+    "        print(\"Exchange 서버 환경변수가 설정되어 있지 않습니다.\")\n",
+    "        return False\n",
+    "    \n",
+    "    msg = MIMEMultipart()\n",
+    "    msg[\"From\"] = sender\n",
+    "    msg[\"To\"] = recipient\n",
+    "    msg[\"Subject\"] = subject\n",
+    "    msg.attach(MIMEText(html_body, \"html\"))\n",
+    "    \n",
+    "    # 첨부 파일 처리\n",
+    "    if attachment_path is not None:\n",
+    "        try:\n",
+    "            # 첨부 파일 읽기\n",
+    "            with open(attachment_path, \"rb\") as attachment_file:\n",
+    "                part = MIMEBase(\"application\", \"pdf\")\n",
+    "                part.set_payload(attachment_file.read())\n",
+    "            \n",
+    "            # 파일 인코딩\n",
+    "            encode_base64(part)\n",
+    "            \n",
+    "            # 첨부 파일 이름 설정\n",
+    "            if attachment_filename is None:\n",
+    "                attachment_filename = os.path.basename(attachment_path)\n",
+    "            \n",
+    "            # 파일명에 한글 또는 특수문자가 포함된 경우에 대비\n",
+    "            try:\n",
+    "                # UTF-8로 인코딩된 파일명 생성\n",
+    "                encoded_filename = attachment_filename.encode('utf-8')\n",
+    "                \n",
+    "                # Content-Disposition 헤더 설정 (RFC2231 표준)\n",
+    "                part.add_header(\n",
+    "                    'Content-Disposition',\n",
+    "                    'attachment',\n",
+    "                    filename='utf-8\\'\\'%s' % urllib.parse.quote(encoded_filename)\n",
+    "                )\n",
+    "                \n",
+    "                # 이전 버전 호환을 위한 추가 헤더\n",
+    "                part.add_header(\n",
+    "                    'Content-Disposition',\n",
+    "                    'attachment',\n",
+    "                    filename=attachment_filename\n",
+    "                )\n",
+    "            except Exception as encode_error:\n",
+    "                print(f\"파일명 인코딩 중 오류: {encode_error}. 기본 방식으로 대체합니다.\")\n",
+    "                part.add_header(\n",
+    "                    \"Content-Disposition\", \n",
+    "                    f'attachment; filename=\"{attachment_filename}\"'\n",
+    "                )\n",
+    "            \n",
+    "            msg.attach(part)\n",
+    "            print(f\"첨부 파일 추가: {attachment_filename}\")\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(\"첨부 파일 추가 중 오류 발생:\", e)\n",
+    "            return False\n",
+    "    \n",
+    "    try:\n",
+    "        # Exchange 서버 연결 설정\n",
+    "        smtp_server = exchange_server\n",
+    "        smtp_port = 587  # Exchange 기본 포트 (환경에 따라 다를 수 있음)\n",
+    "        \n",
+    "        server = smtplib.SMTP(smtp_server, smtp_port)\n",
+    "        server.ehlo()\n",
+    "        server.starttls()\n",
+    "        server.ehlo()\n",
+    "        server.login(sender, email_pw)\n",
+    "        server.sendmail(sender, recipient, msg.as_string())\n",
+    "        server.quit()\n",
+    "        print(\"Exchange 이메일 발송 성공!\")\n",
+    "        return True\n",
+    "    except Exception as e:\n",
+    "        print(\"Exchange 이메일 발송 중 오류 발생:\", e)\n",
+    "        return False\n",
+    "\n",
+    "def send_email_ews():\n",
+    "    # 기본 인증 사용 (NTLM은 별도로 지정)\n",
+    "    credentials = Credentials(\n",
+    "        username=os.getenv(\"EXCHANGE_EMAIL\"),\n",
+    "        password=os.getenv(\"EXCHANGE_PASSWORD\")\n",
+    "    )\n",
+    "    \n",
+    "    # 서버 정보 및 인증 방식 설정\n",
+    "    config = Configuration(\n",
+    "        server=os.getenv(\"EXCHANGE_SERVER\"),\n",
+    "        credentials=credentials\n",
+    "    )\n",
+    "    \n",
+    "    # 계정 연결\n",
+    "    account = Account(\n",
+    "        primary_smtp_address=os.getenv(\"EXCHANGE_EMAIL\"),\n",
+    "        config=config,\n",
+    "        autodiscover=False,  # 직접 서버 지정 시 False\n",
+    "        access_type=DELEGATE\n",
+    "    )\n",
+    "    \n",
+    "    # 메시지 작성\n",
+    "    message = Message(\n",
+    "        account=account,\n",
+    "        subject='테스트 메일',\n",
+    "        body=HTMLBody('<html><body>EWS로 보낸 테스트 메일입니다.</body></html>'),\n",
+    "        to_recipients=['cbj6214@dongwon.com']\n",
+    "    )\n",
+    "    \n",
+    "    # 전송\n",
+    "    message.send()\n",
+    "    return True\n",
+    "# 테스트 함수\n",
+    "def test_exchange_email():\n",
+    "    \"\"\"\n",
+    "    Exchange 이메일 발송 기능 테스트\n",
+    "    \"\"\"\n",
+    "    # 환경 변수 설정 (실제 사용 시에는 .env 파일이나 시스템 환경 변수 사용 권장)\n",
+    "    os.environ[\"EXCHANGE_EMAIL\"] = \"cbj6214@dongwon.com\"\n",
+    "    os.environ[\"EXCHANGE_PASSWORD\"] = \"\"\n",
+    "    os.environ[\"EXCHANGE_SERVER\"] = \"email.dongwon.com\"\n",
+    "    \n",
+    "    # 테스트 이메일 내용\n",
+    "    subject = \"Exchange 이메일 테스트\"\n",
+    "    html_body = \"\"\"\n",
+    "    <html>\n",
+    "    <body>\n",
+    "        <h1>Exchange 이메일 테스트</h1>\n",
+    "        <p>이 이메일은 Exchange 서버를 통해 발송되었습니다.</p>\n",
+    "    </body>\n",
+    "    </html>\n",
+    "    \"\"\"\n",
+    "    recipient = \"cbj6214@dongwon.com\"\n",
+    "    \n",
+    "    # 첨부 파일 테스트 (선택사항)\n",
+    "    # attachment_path = \"test_document.pdf\"\n",
+    "    \n",
+    "    # 이메일 발송 시도\n",
+    "    #result2 = send_email_exchange(subject, html_body, recipient) # , attachment_path)\n",
+    "    result = send_email_ews()\n",
+    "    return result\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    test_result = test_exchange_email()\n",
+    "    print(f\"테스트 결과: {'성공' if test_result else '실패'}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
